--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,15 @@
+<div class="">
+  
+  <div><img src="http://placehold.it/1000x500/dda037.png&text=..."></div>
+
+</div>
+
+
+
+
+
+
+
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
