--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,46 +1,72 @@
-/* Space out content a bit */
+
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+
+  font-family: "ff-good-headline-web-pro-con", 
+                "Arial Narrow", 
+                Arial, 
+                sans-serif;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
+/* Everything but the jumbotron gets side spacing for mobile first views 
 .header,
 .marketing,
 .footer {
   padding-left: 15px;
   padding-right: 15px;
 }
+*/
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
+  
+  background-color: #404040;
+  border-bottom: 5px solid #f2f2f2;
+  
+
 }
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+.header p{
+  color: #f2f2f2;
+  margin-left: 100px;
+  font-family: "ff-good-headline-web-pro-con", 
+                "Arial Narrow", 
+                Arial, 
+                sans-serif; 
 }
+
 
 /* Custom page footer */
 .footer {
+  
+  background-color: #404040;
   padding-top: 19px;
-  color: #777;
   border-top: 1px solid #e5e5e5;
+  
+}
+.footer p {
+
+  margin-left: 100px;
+  color: #f2f2f2;
+  font-family: "ff-good-headline-web-pro-con",
+                "Arial Narrow", 
+                Arial, 
+                sans-serif;
+
 }
 
 /* Customize container */
 @media (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 1000px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
+
+/*
 .container-narrow > hr {
   margin: 30px 0;
 }
-
+*/
 /* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
@@ -70,7 +96,7 @@ body {
   }
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    margin-bottom: 0px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
