--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,11 @@
-<div class="">
+<div class="container" id="image-group">
   
   <div><img src="http://placehold.it/1000x500/dda037.png&text=..."></div>
 
 </div>
-
+<div class="container" id="headline">
+  <h2>We've made it way easier to search for licenses and permits to get your business up and running faster and easier than ever before. Get started below by searching for specific licenses or browsing popular ones.</h2>
+</div>
 
 
 
