layout and responsive

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,37 +1,50 @@
-<div class="container" id="image-group">
+<div id="image-group"  >
   
-  <div><img src="http://placehold.it/1000x500/dda037.png&text=..."></div>
+  <div id="head-img"><img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..."></div>
+  <div id="seal-img"><img class="img-repsonsive"  src="../images/commonwealth_seal_white.png"></div>
+  <div id="head-text">
+    <h1>
+      eLicensing & Permitting Portal
+    </h1>
+    <h2>
+      You work hard for your business. Let us make it easier for you.
+    </h2>
+  </div>
+
+
 
 </div>
-<div class="container" id="headline">
-  <h2>We've made it way easier to search for licenses and permits to get your business up and running faster and easier than ever before. Get started below by searching for specific licenses or browsing popular ones.</h2>
-</div>
 
 
 
 
 
+<div  id="body-wrapper">
+  <div  id="headline">
+    <h2>We've made it way easier to search for licenses and permits to get your business up and running faster and easier than ever before. Get started below by searching for specific licenses or browsing popular ones.</h2>
+  </div>
 
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+  <div class="jumbotron">
+    <h1>Search here!</h1>
+      <p class="lead">
+      
+        (Or else.)
+      </p>
+      <p><a class="btn btn-lg btn-success" ng-href="#">Google<span class="glyphicon glyphicon-ok"></span></a></p>
+  </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+  <div class="row marketing">
+    <h4>HTML5 Boilerplate</h4>
+      <p>
+      HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+      </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+    <h4>Angular</h4>
+      <p>
+      AngularJS is a toolset for building the framework most suited to your application development.
+      </p>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+    <h4>Karma</h4>
+    <p>Spectacular Test Runner for JavaScript.</p>
+  </div>
 </div>
