--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,21 +27,11 @@ body {
 .header p{
   color: #f2f2f2;
   margin-left: 100px;
-  font-family: "ff-good-headline-web-pro-con", 
-                "Arial Narrow", 
-                Arial, 
-                sans-serif; 
+
 }
 
-#headline {
-  
-  background-color: #f2f2f2;
-}
-#headline h2 {
-  text-align: center;
-  padding-left: 100px;
-  padding-right: 100px;
-}
+
+
 
 /* Custom page footer */
 .footer {
@@ -55,10 +45,7 @@ body {
 
   margin-left: 100px;
   color: #f2f2f2;
-  font-family: "ff-good-headline-web-pro-con",
-                "Arial Narrow", 
-                Arial, 
-                sans-serif;
+
 
 }
 
@@ -76,21 +63,85 @@ body {
   margin: 30px 0;
 }
 */
+
+/* styling for the masthead images and text*/
+#image-group {
+  position: relative;
+  height: 500px;
+
+}
+
+
+#head-img {
+  
+  z-index: -1;
+  width: 1000px;
+  height: 500px;
+  position: absolute;
+}
+
+
+ #seal-img {
+
+   margin: 0;
+   z-index: 1;
+   width: 180px;
+   height: 180px;
+   padding-top: 70px;
+   padding-left: 410px;
+   position: absolute;
+}
+
+#head-text {
+  position: absolute;
+  padding-top: 280px;
+  text-align: center;
+  width: 100%;
+  color: #FFFFFF;
+  text-shadow: 1px 1px #000000;
+}
+
+/*Styling for the search and browse sections of the page*/
+#body-wrapper {
+  position: relative;
+  margin: 0px;
+
+}
+
+#body-wrapper #headline {
+  
+  background-color: #f2f2f2;
+  margin: 0;
+}
+
+#body-wrapper #headline h2 {
+  text-align: center;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin: 0px;
+}
+
+
+
 /* Main marketing message and sign up button */
-.jumbotron {
+#body-wrapper .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+  
 }
-.jumbotron .btn {
+#body-wrapper .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
 }
 
 /* Supporting marketing content */
-.marketing {
+#body-wrapper .marketing {
   margin: 40px 0;
+  
 }
-.marketing p + h4 {
+#body-wrapper .marketing p + h4 {
   margin-top: 28px;
 }
 
