--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
 
 </div>
 
-
+<div id="get-started">click here to get started</div>
 
 
 
@@ -30,7 +30,7 @@
       
         (Or else.)
       </p>
-      <p><a class="btn btn-lg btn-success" ng-href="#">Google<span class="glyphicon glyphicon-ok"></span></a></p>
+      <p><a class="btn btn-lg btn-success" ng-href="#">Google <span class="glyphicon glyphicon-ok"></span></a></p>
   </div>
 
   <div class="row marketing">
