--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
 
 </div>
 
-<div id="get-started">click here to get started</div>
+<div id="get-started"></div>
 
 
 
@@ -33,11 +33,14 @@
       <p><a class="btn btn-lg btn-success" ng-href="#">Google <span class="glyphicon glyphicon-ok"></span></a></p>
   </div>
 
+  <hr>
+
   <div class="row marketing">
     <h4>HTML5 Boilerplate</h4>
       <p>
       HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
       </p>
+
 
     <h4>Angular</h4>
       <p>
