--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,15 @@
 <div id="image-group"  >
   
-  <div id="head-img"><img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..."></div>
-  <div id="seal-img"><img class="img-repsonsive"  src="../images/commonwealth_seal_white.png"></div>
+
+  
+
+  <div id="head-img">
+    <img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..."></div>
+  <div id="seal-img">
+    <img class="img-repsonsive"  src="../images/commonwealth_seal_white.png">
+  </div>
+ 
+
   <div id="head-text">
     <h1>
       eLicensing & Permitting Portal
@@ -15,7 +23,13 @@
 
 </div>
 
-<div id="get-started"></div>
+<div id="get-started">
+
+    <div id="element">
+      <h1>Get Started Now</h1>
+    </div>  
+
+</div>
 
 
 
