--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,19 +1,19 @@
-<div id="image-group"  >
+<div class="image-group"  >
   
 
   
 
-  <div id="head-img">
+  <div class="head-img">
     <img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..."></div>
-  <div id="seal-img">
+  <div class="seal-img">
     <img class="img-repsonsive"  src="../images/commonwealth_seal_white.png">
   </div>
  
 
-  <div id="head-text">
-    <h1>
+  <div class="head-text">
+    <p>
       eLicensing & Permitting Portal
-    </h1>
+    </p>
     <h2>
       You work hard for your business. Let us make it easier for you.
     </h2>
@@ -23,18 +23,18 @@
 
 </div>
 
-<div id="get-started">
+<div class="get-started">
 
-    <div id="element">
-      <h1>Get Started Now</h1>
+    <div class="element">
+      <p>Get Started Now</p>
     </div>  
 
 </div>
 
 
 
-<div  id="body-wrapper">
-  <div  id="headline">
+<div  class="body-wrapper">
+  <div  class="headline">
     <h2>We've made it way easier to search for licenses and permits to get your business up and running faster and easier than ever before. Get started below by searching for specific licenses or browsing popular ones.</h2>
   </div>
 
@@ -47,7 +47,7 @@
       <p><a class="btn btn-lg btn-success" ng-href="#">Google <span class="glyphicon glyphicon-ok"></span></a></p>
   </div>
 
-  <hr>
+ 
 
   <div class="row marketing">
     <h4>HTML5 Boilerplate</h4>
@@ -64,4 +64,27 @@
     <h4>Karma</h4>
     <p>Spectacular Test Runner for JavaScript.</p>
   </div>
+
+
+
+  <div class="row marketing">
+      <h4>HTML5 Boilerplate</h4>
+      <p>
+      HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+      </p>
+
+
+    <h4>Angular</h4>
+      <p>
+      AngularJS is a toolset for building the framework most suited to your application development.
+      </p>
+
+    <h4>Karma</h4>
+    <p>Spectacular Test Runner for JavaScript.</p>
+    <div class="show-me">
+      <a  href="#" ><div class="press-me">SHOW MOAR POPULAR LICENSES</div></a>
+    </div>
+
+  </div>
+ 
 </div>
