--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,11 @@
+/* Customize container */
+
+.container {
+    max-width: 1000px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
 
 body {
 
@@ -11,8 +19,8 @@ body {
 .header,
 .marketing,
 .footer {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 
@@ -37,37 +45,27 @@ body {
 .footer {
   
   background-color: #404040;
-  padding-top: 19px;
+  padding-top: 1.3em;
   border-top: 1px solid #e5e5e5;
   
 }
 .footer p {
 
   margin-left: 100px;
+  margin-bottom: 0;
   color: #f2f2f2;
 
 
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 1000px;
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
 
-/*
-.container-narrow > hr {
-  margin: 30px 0;
-}
-*/
+
+
 
 /* styling for the masthead images and text*/
 .image-group {
   position: relative;
-  padding-bottom: 9%;
+  padding-bottom: 5%;
 
 }
 
@@ -132,7 +130,8 @@ body {
 .get-started .element p {
   color: #FFFFFF;
   text-align: center;
-  font-size: 36px;
+  font-size: 2.6em;
+  margin-top: -0.1em;
 }
 
 
@@ -199,21 +198,12 @@ body {
 }
 
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
+@media  (max-width:48em){
+  .body-wrapper .headline h2 {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
   }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 0px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
+  .seal-img{
+    display: none;
   }
 }
