--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -174,11 +174,23 @@ body {
 .body-wrapper .marketing {
   padding-top: 40px;
   margin: 0px;
+  border-bottom: 1px solid #e5e5e5;
   
 }
-.body-wrapper .marketing p + h4 {
+.body-wrapper .marketing .caption   {
   margin-top: 28px;
+  text-align: center;
+  font-size: 2.6em;
+  color:#dda037;
 }
+
+.body-wrapper .marketing .body-text   {
+  margin-top: 28px;
+  text-align: center;
+  font-size: 1.4em;
+  margin-top: 0;
+}
+
 
 .show-me {
   width: 20em;
