--- a/app/views/main.html
+++ b/app/views/main.html
@@ -50,39 +50,38 @@
  
 
   <div class="row marketing">
+    <p class="caption">Browse popular licenses</p>
+      <p class="body-text">Take a look at some of the most searched for Licenses</p>
     <h4>HTML5 Boilerplate</h4>
       <p>
-      HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+      
       </p>
 
 
-    <h4>Angular</h4>
-      <p>
-      AngularJS is a toolset for building the framework most suited to your application development.
-      </p>
-
-    <h4>Karma</h4>
-    <p>Spectacular Test Runner for JavaScript.</p>
-  </div>
-
-
-
-  <div class="row marketing">
-      <h4>HTML5 Boilerplate</h4>
-      <p>
-      HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-      </p>
-
-
-    <h4>Angular</h4>
-      <p>
-      AngularJS is a toolset for building the framework most suited to your application development.
-      </p>
+  
 
     <h4>Karma</h4>
     <p>Spectacular Test Runner for JavaScript.</p>
     <div class="show-me">
       <a  href="#" ><div class="press-me">SHOW MOAR POPULAR LICENSES</div></a>
+    </div>
+  </div>
+
+
+
+  <div class="row marketing">
+      <p class="caption">
+      Browse all Licenses by category
+      </p>
+
+      <p class="body-text">
+      Browse through all licenses that we have available.
+      </p>
+
+    <h4>Karma</h4>
+    <p>Spectacular Test Runner for JavaScript.</p>
+    <div class="show-me">
+      <a  href="#" ><div class="press-me">SHOW ALL LICENSES</div></a>
     </div>
 
   </div>
