--- a/app/views/main.html
+++ b/app/views/main.html
@@ -62,9 +62,15 @@
 
     <h4>Karma</h4>
     <p>Spectacular Test Runner for JavaScript.</p>
-    <div class="show-me">
-      <a  href="#" ><div class="press-me">SHOW MOAR POPULAR LICENSES</div></a>
+    <div class="row collapse" id="popular">
+      <div class="col-xs-12 col-md-6" >Here are a couple columns for further examples.</div>
+      <div class="col-xs-12 col-md-6">This is column two</div>
+    </div>    
+
+    <div class="row show-me">
+      <a  data-toggle="collapse" data-target="#popular" href="" aria-expanded="false" aria-controls="popular" ><div class="press-me">SHOW MOAR POPULAR LICENSES</div></a>
     </div>
+
   </div>
 
 
@@ -80,9 +86,15 @@
 
     <h4>Karma</h4>
     <p>Spectacular Test Runner for JavaScript.</p>
-    <div class="show-me">
-      <a  href="#" ><div class="press-me">SHOW ALL LICENSES</div></a>
+    <div class="row collapse" id="all">
+      <div class="col-xs-12 col-md-6">Here are a couple columns for further examples.</div>
+      <div class="col-xs-12 col-md-6">This is column two</div>
     </div>
+
+    <div class="row show-me">
+      <a data-toggle="collapse" data-target="#all" href="" aria-expanded="false" aria-controls="all" ><div class="press-me">SHOW ALL LICENSES</div></a>
+    </div>
+
 
   </div>
  
