--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,9 +4,9 @@
   
 
   <div class="head-img">
-    <img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..."></div>
+    <img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..." alt="Head Image" role="img"></div>
   <div class="seal-img">
-    <img class="img-repsonsive"  src="../images/commonwealth_seal_white.png">
+    <img class="img-repsonsive"  src="../images/commonwealth_seal_white.png" alt="State Seal" role="img">
   </div>
  
 
