adding search widget

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,5 @@
-<p>This is the about view.</p>
+<!-- .CustomHTML -->
+<div class="customHTML">
+	<iframe title="Search results" id="iFrame" name="iFrame" TARGET="ResultFrame" frameborder="0" width="100%" height="1130" scrolling="no" OnLoad="window.scroll(0, 0);" src="http://146.243.30.38/search?<!--#echo var="QUERY_STRING" -->"> </iframe>	
+</div>
+
