--- a/app/views/main.html
+++ b/app/views/main.html
@@ -45,19 +45,23 @@
     <div style="padding: 0 0 0.5em 0; border: 1px solid #e0e0e0; border-radius: 3px;">
       <h2 style="min-height: 30px; box-shadow: 0px 0px 6px rgb(222, 222, 222) inset; border-bottom: 1px solid rgb(229, 229, 229); background: #efefef url('http://www.mass.gov/resources/images/template/icon_w_license.png') 0.5em 0.3em no-repeat; margin-bottom: 0.3em; padding: 0.3em 0.5em 0.3em 33px;">Professional License Information</h2>
         <p style="margin: 0.7em 1em 0 1em; font-size: 90%; list-style: none; color: #555;">Search by license type to find out where to apply for, renew, or verify a license, or to file a complaint against a license holder. (Ex. Nursing)</p>
-          <form name="output" value="xml_no_dtd" style="margin: 0.7em;" method="get" action="about.html">
+          <form name="output" value="xml_no_dtd" style="margin: 0.7em;" method="get" action="about.html/search">
+            <input type="text" name="q" id="q"  style="position: relative;">
+            <label for="q">Enter license type:</label>
+            <input type="hidden" name="site" value="PORTALxLICENSE">
             <input type="hidden" name="client" value="custom_license">
             <input type="hidden" name="proxystylesheet" value="custom_license">
+            <!--
             <input type="hidden" name="getfields" value="*">
             <input type="hidden" name="ie" value="UTF-8">
             <input type="hidden" name="oe" value="UTF-8">
             <input type="hidden" name="tlen" value="215">
             <input type="hidden" name="sitefolder" value="portal">
             <input type="hidden" name="filter" value="0">
-            <input type="hidden" name="site" value="PORTALxLICENSE">
             <input type="hidden" name="startsite" value="PORTALxLICENSE">
-              <label for="q">Enter license type:</label> 
-            <input type="text" name="q" id="q"  style="position: relative;">
+            -->
+             
+            
             <input type="submit" style="margin-top:5px; margin-left: 0.5em;" name="Search" value="Search">
           </form>
     </div>
