--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,6 +1,6 @@
 <div class="customHTML">
   <!-- .CustomHTML -->
-	<iframe title="Search results" id="iFrame" name="iFrame" TARGET="ResultFrame" frameborder="0" width="100%" height="1130" scrolling="no" OnLoad="window.scroll(0, 0);" src="http://146.243.30.38/search?<!--#echo var="QUERY_STRING" -->"> </iframe>	
+	<iframe title="Search results" id="iFrame" name="iFrame" TARGET="ResultFrame" frameborder="0" width="100%" height="300px" scrolling="no" OnLoad="window.scroll(0, 0);" src="http://146.243.30.38/search?/#/about?q=barber&client=defult_frontend&proxystylesheet=defult_frontend&site=PORTALxLICENSE&startsite=PORTALxLICENSE&getfields=*&ie=UTF-8&oe=UTF-8&tlen=215&sitefolder=portal&filter=0&output=xml_no_dtd&Search=Search&proxyreload=1"> </iframe>	
 </div>
 
 
