--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -64,8 +64,8 @@ body {
 
 /* styling for the masthead images and text*/
 .image-group {
-  position: relative;
-  padding-bottom: 5%;
+
+  height: 500px;
 
 }
 
@@ -102,7 +102,7 @@ body {
 .head-text p{
   font-size: 36px;
 }
-/*Styling for the "Get Started Now" button */
+/*Styling for the "Get Started Now" element */
 
 .get-started {
   position: relative;
@@ -133,22 +133,16 @@ body {
   font-size: 2.6em;
   margin-top: -0.1em;
 }
-
-
-/*Styling for the search and browse sections of the page*/
-.body-wrapper {
-  position: relative;
-  margin: 0px;
-}
-
-.body-wrapper .headline {
+/* Styleing for page headline */
+.headline {
   
   background-color: #f2f2f2;
   margin: 0;
+  z-index: 2;
   
 }
 
-.body-wrapper .headline h2 {
+.headline h2 {
   text-align: center;
   padding-left: 100px;
   padding-right: 100px;
@@ -157,6 +151,12 @@ body {
   margin: 0px;
 }
 
+
+/*Styling for the search and browse sections of the page*/
+.body-wrapper {
+  position: relative;
+  margin: 0px;
+}
 
 
 /* Main marketing message and sign up button */
