--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,14 +1,14 @@
 
 
 
-<div  class="body-wrapper">
+<div  class="body-wrapper" ng-controller="mainCtrl as main">
   
 
  
   <div class="row marketing" >
     <div class="customHTML">
     <!--.CustomHTML -->
-    <div style="padding: 0 0 0.5em 0; border: 1px solid #e0e0e0; border-radius: 3px;">
+    <div ng-controller="fetchCtrl as fetch" style="padding: 0 0 0.5em 0; border: 1px solid #e0e0e0; border-radius: 3px;">
       <h2 style="min-height: 30px; box-shadow: 0px 0px 6px rgb(222, 222, 222) inset; border-bottom: 1px solid rgb(229, 229, 229); background: #efefef url('http://www.mass.gov/resources/images/template/icon_w_license.png') 0.5em 0.3em no-repeat; margin-bottom: 0.3em; padding: 0.3em 0.5em 0.3em 33px;  margin-top: 0px;">Professional License Information</h2>
         <p style="margin: 0.7em 1em 0 1em; font-size: 90%; list-style: none; color: #555;">Search by license type to find out where to apply for, renew, or verify a license, or to file a complaint against a license holder. (Ex. Nursing)</p>
           <form  method="GET" action="#/results" style="margin: 0.7em;">
