--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 
 
 
-<div  class="body-wrapper">
+<div class="body-wrapper" ng-controller="MainCtrl as ctrl">
   
 
  
@@ -28,13 +28,9 @@
             <input type="hidden" name="output" value="xml_no_dtd">
             
             
-            <input type="text" name="q" id="q"  style="position: relative;" ng-model="query">
+            <input type="text" name="q" id="q"  style="position: relative;" ng-model="ctrl.query">
             <label for="q">Enter license type:</label>
-
-            
-             
-            
-            <input type="submit" style="margin-top:5px; margin-left: 0.5em;" name="Search" value="Search">
+            <input type="submit" style="margin-top:5px; margin-left: 0.5em;" name="Search" value="Search" ng-click="ctrl.submit()" >
           </form>
     </div>
   </div>
