--- a/app/views/results.html
+++ b/app/views/results.html
@@ -7,7 +7,7 @@
   <div class="row marketing" >
 	<div class="customHTML">
   	<!-- .CustomHTML -->
-		<iframe title="Search results" id="iFrame" name="iFrame" TARGET="ResultFrame" frameborder="0" width="100%" scrolling="no" OnLoad="window.scroll(0, 0);" src="http://146.243.30.38/search?q=barber&client=custom_license&proxystylesheet=custom_license&site=PORTALxLICENSE&startsite=PORTALxLICENSE&getfields=*&ie=UTF-8&oe=UTF-8&tlen=215&sitefolder=portal&filter=0&output=xml_no_dtd&Search=Search&proxyreload=1"> </iframe>	
+		<iframe title="Search results" id="iFrame" name="iFrame" TARGET="ResultFrame" frameborder="0" width="100%" scrolling="no" OnLoad="window.scroll(0, 0);" src="http://146.243.30.38/search?{{ctrl.query}}> </iframe>	
 	</div>
    </div>
 
