--- a/app/views/main.html
+++ b/app/views/main.html
@@ -52,7 +52,7 @@
 
 
   <div class="row marketing">
-    <p class="caption">Browse popular licenses</p>
+    <h1 class="caption">Browse popular licenses</h1>
       <p class="body-text">Take a look at some of the most searched for Licenses</p>
     <h4>HTML5 Boilerplate</h4>
       <p>
@@ -70,7 +70,7 @@
     </div>    
 
     <div class="row show-me">
-      <a  data-toggle="collapse" data-target="#popular" href="" aria-expanded="false" aria-controls="popular" ><div class="press-me">SHOW MOAR POPULAR LICENSES</div></a>
+      <a  data-toggle="collapse" data-target="#popular" href="" aria-expanded="false" aria-controls="popular" ><div class="press-me">SHOW MORE POPULAR LICENSES</div></a>
     </div>
 
   </div>
@@ -78,9 +78,9 @@
 
 
   <div class="row marketing">
-      <p class="caption">
+      <h1 class="caption">
       Browse all Licenses by category
-      </p>
+      </h1>
 
       <p class="body-text">
       Browse through all licenses that we have available.
