--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,13 +9,13 @@
     <div class="customHTML">
     <!--.CustomHTML -->
     <div style="padding: 0 0 0.5em 0; border: 1px solid #e0e0e0; border-radius: 3px;">
-      <h2 style="min-height: 30px; box-shadow: 0px 0px 6px rgb(222, 222, 222) inset; border-bottom: 1px solid rgb(229, 229, 229); background: #efefef url('http://www.mass.gov/resources/images/template/icon_w_license.png') 0.5em 0.3em no-repeat; margin-bottom: 0.3em; padding: 0.3em 0.5em 0.3em 33px;  margin-top: 0px;">Professional License Information</h2>
+      <h2 style="min-height: 30px; box-shadow: 0px 0px 6px rgb(222, 222, 222) inset; border-bottom: 1px solid rgb(229, 229, 229); background: #efefef url('http://www.mass.gov/resources/images/template/icon_w_license.png') 0.5em 0.3em no-repeat; margin-bottom: 0.3em; padding: 0.3em 0.5em 0.3em 33px;  margin-top: 0px;">&nbsp;  Professional License Information</h2>
         <p style="margin: 0.7em 1em 0 1em; font-size: 90%; list-style: none; color: #555;">Search by license type to find out where to apply for, renew, or verify a license, or to file a complaint against a license holder. (Ex. Nursing)</p>
-          <form  method="GET" action="#/results" style="margin: 0.7em;" ng-submit="main.getResults()">
+          <form  name="output" id="output" style="margin: 0.7em;" ng-submit="main.getResults()"> <!--   method="GET" action="#/results"-->
             
-            
-            <input type="hidden" name="client" value="custom_license">
             <!--
+            <input type="hidden" name="client" value="custom_license">
+             
             <input type="hidden" name="proxystylesheet" value="custom_license">
             
             <input type="hidden" name="site" value="PORTALxLICENSE">
@@ -29,15 +29,16 @@
             
             <input type="hidden" name="output" value="xml_no_dtd">
             -->
-            
-            <input type="text" name="q" id="q"  style="position: relative;" ng-model="main.form.widget.query">
-            <label for="q">Enter license type:</label>
-            <input type="submit" style="margin-top:5px; margin-left: 0.5em;" name="Search" value="Search">
-          </form>
+            <label for="q">&nbsp; Enter license type:
+                 <input type="text" name="q" id="q"  style="position: relative;" ng-model="main.form.query">
+            </label>
+            <input type="submit" style="margin-top:5px; margin-left: 0.5em;" name="Search" value="Search" >
+
+          </form >
     </div>
   </div>
   <!-- .CustomHTML --> 
-  <h3>{{main.form.widget.query}}</h3>
+  <h3>{{main.form.query}}</h3>
 
   <ul>
     <li ng-repeat="results in results">
