--- a/app/views/results.html
+++ b/app/views/results.html
@@ -14,9 +14,10 @@
 			TARGET="ResultFrame" 
 			frameborder="0" 
 			width="100%" 
+           height="1130"
 			scrolling="no" 
 			OnLoad="window.scroll(0, 0);" 
-			src= ""
+			src="http://146.243.30.38/search?<!--#echo var='QUERY_STRING' -->" 
 		> 
 		{{main.widget.query}}
 		</iframe>	
@@ -24,17 +25,7 @@
 	</div>
    </div>
 
-<!--
-   <script> 
-   		$.ajax({
-                  url: "http://146.243.30.38/search?client=custom_license&proxystylesheet=custom_license&site=PORTALxLICENSE&startsite=PORTALxLICENSE&getfields=*&ie=UTF-8&oe=UTF-8&tlen=215&sitefolder=portal&filter=0&output=xml_no_dtd&q=barber&Search=Search",
-                  cache: false
-               })
-               .done(function( html ) {
-               $( "#iFrame" ).append( html );
-               });
-   </script>
--->
+
                     <!--
 			"http://146.243.30.38/search?client=custom_license&proxystylesheet=custom_license&site=PORTALxLICENSE&startsite=PORTALxLICENSE&getfields=*&ie=UTF-8&oe=UTF-8&tlen=215&sitefolder=portal&filter=0&output=xml_no_dtd&q=barber&Search=Search"
 			-->
