--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,24 +11,7 @@
     <div style="padding: 0 0 0.5em 0; border: 1px solid #e0e0e0; border-radius: 3px;">
       <h2 style="min-height: 30px; box-shadow: 0px 0px 6px rgb(222, 222, 222) inset; border-bottom: 1px solid rgb(229, 229, 229); background: #efefef url('http://www.mass.gov/resources/images/template/icon_w_license.png') 0.5em 0.3em no-repeat; margin-bottom: 0.3em; padding: 0.3em 0.5em 0.3em 33px;  margin-top: 0px;">&nbsp;  Professional License Information</h2>
         <p style="margin: 0.7em 1em 0 1em; font-size: 90%; list-style: none; color: #555;">Search by license type to find out where to apply for, renew, or verify a license, or to file a complaint against a license holder. (Ex. Nursing)</p>
-          <form class="" name="output" id="output" style="margin: 0.7em;" role="form" ng-submit="getResults(formQuery)"> <!--   method="GET" action="#/results"-->
-            
-            <!--
-            <input type="hidden" name="client" value="custom_license">
-             
-            <input type="hidden" name="proxystylesheet" value="custom_license">
-            
-            <input type="hidden" name="site" value="PORTALxLICENSE">
-            <input type="hidden" name="startsite" value="PORTALxLICENSE">
-            <input type="hidden" name="getfields" value="*">
-            <input type="hidden" name="ie" value="UTF-8">
-            <input type="hidden" name="oe" value="UTF-8">
-            <input type="hidden" name="tlen" value="215">
-            <input type="hidden" name="sitefolder" value="portal">
-            <input type="hidden" name="filter" value="0">
-            
-            <input type="hidden" name="output" value="xml_no_dtd">
-            -->
+          <form class="" name="output" id="output" style="margin: 0.7em;" role="form" ng-submit="getResults(formQuery)"> 
             <label for="q">&nbsp; Enter license type:
                  <input type="text" name="q" id="q"  style="position: relative;" ng-model="formQuery" />
             </label>
@@ -40,12 +23,14 @@
   <!-- .CustomHTML --> 
   <h3>{{formQuery}}</h3>
 
+
+<!-- 
   <ul>
     <li ng-repeat="results in results">
       <p>{{results}}</p>
     </li>
   </ul>
-
+-->
   
 
   </div>
