--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,13 +24,15 @@
   <h3>{{formQuery}}</h3>
 
 
-<!-- 
+
   <ul>
-    <li ng-repeat="results in results">
-      <p>{{results}}</p>
+    <li ng-repeat="result in queryResults.GSP.RES.R">
+      <p>{{result.T}}</p>
+          <ul>
+            <li></li>
+          </ul>
     </li>
   </ul>
--->
   
 
   </div>
