--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,32 +5,39 @@
   
 
  
-  <div class="row marketing" >
+  <div class="row marketing" >  
     <div class="customHTML">
     <!--.CustomHTML -->
-    <div style="padding: 0 0 0.5em 0; border: 1px solid #e0e0e0; border-radius: 3px;">
-      <h2 style="min-height: 30px; box-shadow: 0px 0px 6px rgb(222, 222, 222) inset; border-bottom: 1px solid rgb(229, 229, 229); background: #efefef url('http://www.mass.gov/resources/images/template/icon_w_license.png') 0.5em 0.3em no-repeat; margin-bottom: 0.3em; padding: 0.3em 0.5em 0.3em 33px;  margin-top: 0px;">&nbsp;  Professional License Information</h2>
-        <p style="margin: 0.7em 1em 0 1em; font-size: 90%; list-style: none; color: #555;">Search by license type to find out where to apply for, renew, or verify a license, or to file a complaint against a license holder. (Ex. Nursing)</p>
-          <form class="" name="output" id="output" style="margin: 0.7em;" role="form" ng-submit="getResults(formQuery)"> 
-            <label for="q">&nbsp; Enter license type:
-                 <input type="text" name="q" id="q"  style="position: relative;" ng-model="formQuery" />
-            </label>
-            <input type="submit" style="margin-top:5px; margin-left: 0.5em;" name="Search" value="Search" >
+    <div >
+      <h2 class="caption">Search for a specific license</h2>
+        <p class="body-text">Use our search tool to find licenses that relate to your specific line of business.</p>
+          
 
+          <form class="form" name="output" id="output" role="form" ng-submit="getResults(formQuery)">
+            <div class="form-group"> 
+               <!--<label for="q">&nbsp; Enter license type:</label>-->
+                 <div class="input-group q-group">
+                    <input class="form-control input-lg" type="text" name="q" id="q"  ng-model="formQuery" placeholder="Ex. Nursing" />
+                    <div class="input-group-addon submit-addon"><a class="submit" href="" role="submit" ng-click="getResults(formQuery)">Search</a></div>
+                 </div> 
+            </div>
+            
           </form >
+
+
     </div>
   </div>
   <!-- .CustomHTML --> 
   <h3>{{formQuery}}</h3>
 
-
+<!--
+<input class="" type="submit"  name="Search" value="Search" >
+-->
 
   <ol>
     <li class="result-item" ng-repeat="result in queryRes" >
-      <p class="result-copy" ng-bind-html="result.T"></p>
-      <ul>
-         <li ><a href="{{result.U}}">{{result.MT.description}}</a></li>
-      </ul>
+      <h2 class="result-copy" ng-bind-html="result.T"></h2>
+      <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
     </li>
   </ol>
   
