--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -65,7 +65,7 @@ body {
 /* styling for the masthead images and text*/
 .image-group {
 
-  height: 500px;
+  height: 400px;
 
 }
 
@@ -83,14 +83,14 @@ body {
    z-index: 1;
    width: 180px;
    height: 180px;
-   padding-top: 8%;
+   padding-top: 3%;
    position: relative;
 
 }
 
 .head-text {
   
-  padding-top: 10%;
+  padding-top: 4%;
   text-align: center;
   width: 100%;
   color: #FFFFFF;
@@ -170,14 +170,22 @@ body {
   background-color: #dda037;
   color: #FFFFFF;
   font-size: 2.3em;
+  width: 100%;
+  height: 100%;
+  padding: 6px 12px;
+  border-top-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 .submit:hover, .submit:focus{
   text-decoration: none;
   color: #FFFFFF;
+  background-color: #B3904F;
 }
 .submit-addon{
   background-color: #dda037;
+  padding: 0px;
 }
+
 
 .result-item {
   font-size: 30px;
