--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,26 +13,26 @@
         <p class="body-text">Use our search tool to find licenses that relate to your specific line of business.</p>
           
 
-          <form class="form" name="output" id="output" role="form" ng-submit="getResults(formQuery)">
+          <form class="form" name="output" id="output" role="form" >
             <div class="form-group"> 
-               <!--<label for="q">&nbsp; Enter license type:</label>-->
                  <div class="input-group q-group">
                     <input class="form-control input-lg" type="text" name="q" id="q"  ng-model="formQuery" placeholder="Ex. Nursing" />
                     <div class="input-group-addon submit-addon"><a class="submit" href="" role="submit" ng-click="getResults(formQuery)">Search</a></div>
                  </div> 
             </div>
-            
           </form >
 
 
     </div>
   </div>
+
+<div ui-view></div>
+
+
   <!-- .CustomHTML --> 
   <h3>{{formQuery}}</h3>
 
-<!--
-<input class="" type="submit"  name="Search" value="Search" >
--->
+
 
   <ol>
     <li class="result-item" ng-repeat="result in queryRes" >
@@ -41,57 +41,6 @@
     </li>
   </ol>
   
-
-  </div>
-
-
-
-  <div class="row marketing">
-    <h1 class="caption">Browse popular licenses</h1>
-      <p class="body-text">Take a look at some of the most searched for Licenses</p>
-    <h4>HTML5 Boilerplate</h4>
-      <p>
-      
-      </p>
-
-
-  
-
-    <h4>Karma</h4>
-    <p>Spectacular Test Runner for JavaScript.</p>
-    <div class="row collapse" id="popular">
-      <div class="col-xs-12 col-md-6" >Here are a couple columns for further examples.</div>
-      <div class="col-xs-12 col-md-6">This is column two</div>
-    </div>    
-
-    <div class="row show-me">
-      <a  data-toggle="collapse" data-target="#popular" href="" aria-expanded="false" aria-controls="popular" ><div class="press-me">SHOW MORE POPULAR LICENSES</div></a>
-    </div>
-
-  </div>
-
-
-
-  <div class="row marketing">
-      <h1 class="caption">
-      Browse all Licenses by category
-      </h1>
-
-      <p class="body-text">
-      Browse through all licenses that we have available.
-      </p>
-
-    <h4>Karma</h4>
-    <p>Spectacular Test Runner for JavaScript.</p>
-    <div class="row collapse" id="all">
-      <div class="col-xs-12 col-md-6">Here are a couple columns for further examples.</div>
-      <div class="col-xs-12 col-md-6">This is column two</div>
-    </div>
-
-    <div class="row show-me">
-      <a data-toggle="collapse" data-target="#all" href="" aria-expanded="false" aria-controls="all" ><div class="press-me">SHOW ALL LICENSES</div></a>
-    </div>
-
 
   </div>
  
