--- a/app/views/results.html
+++ b/app/views/results.html
@@ -1,86 +1,27 @@
 
 
 
-<div  class="body-wrapper" ng-controller="MainCtrl as main">
+<div  class="body-wrapper" ng-controller="">
   
  
   <div class="row marketing" >
 	<div class="customHTML">
   	<!-- .CustomHTML -->
-		<iframe 
-			title="Search results" 
-			id="iFrame" 
-			name="iFrame" 
-			TARGET="ResultFrame" 
-			frameborder="0" 
-			width="100%" 
-           height="1130"
-			scrolling="no" 
-			OnLoad="window.scroll(0, 0);" 
-			src="http://146.243.30.38/search?<!--#echo var='QUERY_STRING' -->" 
-		> 
-		{{main.widget.query}}
-		</iframe>	
-		<p>{{main.widget.query}}</p>
+         <ol>
+           <li class="result-item" ng-repeat="result in queryRes" >
+             <h2 class="result-copy" ng-bind-html="result.T"></h2>
+             <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
+           </li>
+         </ol>
+
+	
+		<p>{{$scope.formQuery}}</p>
 	</div>
    </div>
 
-
-                    <!--
-			"http://146.243.30.38/search?client=custom_license&proxystylesheet=custom_license&site=PORTALxLICENSE&startsite=PORTALxLICENSE&getfields=*&ie=UTF-8&oe=UTF-8&tlen=215&sitefolder=portal&filter=0&output=xml_no_dtd&q=barber&Search=Search"
-			-->
-
-
-
-
-  <div class="row marketing">
-    <p class="caption">Browse popular licenses</p>
-      <p class="body-text">Take a look at some of the most searched for Licenses</p>
-    <h4>HTML5 Boilerplate</h4>
-      <p>
-      
-      </p>
-
-
   
 
-    <h4>Karma</h4>
-    <p>Spectacular Test Runner for JavaScript.</p>
-    <div class="row collapse" id="popular">
-      <div class="col-xs-12 col-md-6" >Here are a couple columns for further examples.</div>
-      <div class="col-xs-12 col-md-6">This is column two</div>
-    </div>    
 
-    <div class="row show-me">
-      <a  data-toggle="collapse" data-target="#popular" href="" aria-expanded="false" aria-controls="popular" ><div class="press-me">SHOW MOAR POPULAR LICENSES</div></a>
-    </div>
-
-  </div>
-
-
-
-  <div class="row marketing">
-      <p class="caption">
-      Browse all Licenses by category
-      </p>
-
-      <p class="body-text">
-      Browse through all licenses that we have available.
-      </p>
-
-    <h4>Karma</h4>
-    <p>Spectacular Test Runner for JavaScript.</p>
-    <div class="row collapse" id="all">
-      <div class="col-xs-12 col-md-6">Here are a couple columns for further examples.</div>
-      <div class="col-xs-12 col-md-6">This is column two</div>
-    </div>
-
-    <div class="row show-me">
-      <a data-toggle="collapse" data-target="#all" href="" aria-expanded="false" aria-controls="all" ><div class="press-me">SHOW ALL LICENSES</div></a>
-    </div>
-
-
-  </div>
  
 </div>
 
