UI router setup

--- a/app/partials/results.html
+++ b/app/partials/results.html
@@ -1,7 +1,7 @@
 
 
 
-<div  class="body-wrapper" ng-controller="">
+<div  class="body-wrapper" ng-controller="ResultsCtrl">
   
  
   <div class="row marketing" >
