--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,9 +1,3 @@
-
-
-
-<div class="body-wrapper" > <!-- ng-controller="MainCtrl as main" -->
-  
-<!--
  
   <div class="row marketing" >  
     <div class="customHTML">
@@ -25,27 +19,5 @@
 
     </div>
   </div>
--->
 
-  <!-- .CustomHTML --> 
-  <h3>{{formQuery}}</h3>
-
-
-
-
-
-
-
-
-<!--
-  <ol>
-    <li class="result-item" ng-repeat="result in queryRes" >
-      <h2 class="result-copy" ng-bind-html="result.T"></h2>
-      <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
-    </li>
-  </ol>
-  -->
-
-  </div>
- 
-</div>
+  <div ui-view></div>
