passing requested data between controllers

--- a/app/partials/popular.html
+++ b/app/partials/popular.html
@@ -17,7 +17,7 @@
     </div>    
 
     <div class="row show-me">
-      <a  data-toggle="collapse" data-target="#popular" href="" aria-expanded="false" aria-controls="popular" ><div class="press-me">SHOW MORE POPULAR LICENSES</div></a>
+      <a class="press-link" data-toggle="collapse" data-target="#popular" href="" aria-expanded="false" aria-controls="popular" ><div class="press-me">SHOW MORE POPULAR LICENSES</div></a>
     </div>
 
   </div>
