--- a/app/partials/category.html
+++ b/app/partials/category.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="row show-me">
-      <a data-toggle="collapse" data-target="#all" href="" aria-expanded="false" aria-controls="all" ><div class="press-me">SHOW ALL LICENSES</div></a>
+      <a class="press-link" data-toggle="collapse" data-target="#all" href="" aria-expanded="false" aria-controls="all" ><div class="press-me">SHOW ALL LICENSES</div></a>
     </div>
 
 
