--- a/app/partials/results.html
+++ b/app/partials/results.html
@@ -1,29 +1,21 @@
 
 
 
-<div  class="body-wrapper" ng-controller="ResultsCtrl">
-  
  
-  <div class="row marketing" >
+
+  <div class="row marketing" ng-controller="ResultsCtrl" >
 	<div class="customHTML">
-  	<!-- .CustomHTML -->
+ 
          <ol>
            <li class="result-item" ng-repeat="result in queryRes" >
              <h2 class="result-copy" ng-bind-html="result.T"></h2>
              <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
            </li>
-         </ol>
-
-	
-		<p>{{$scope.formQuery}}</p>
+         </ol>	
+		<p>{{formQuery}}</p>
 	</div>
-   </div>
+   </div> 
 
-  
-
-
- 
-</div>
 
 
 
