--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,5 +1,5 @@
  
-  <div class="row marketing" >  
+  <div class="row marketing"  ng-controller="SearchCtrl">  
     <div class="customHTML">
     
     <div >
@@ -20,4 +20,20 @@
     </div>
   </div>
 
-  <div ui-view></div>
+  <div ui-view="results"></div>
+
+
+<!--
+  <div class="row marketing"  ng-controller="ResultsCtrl">
+  <div class="customHTML">
+         <ol>
+           <li class="result-item" ng-repeat="result in queryRes" >
+             <h2 class="result-copy" ng-bind-html="result.T"></h2>
+             <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
+           </li>
+         </ol>  
+    <p>{{formQuery}}</p>
+  </div>
+   </div> 
+</div>
+-->
