--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -176,6 +176,7 @@ body {
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+
 .submit:hover, .submit:focus{
   text-decoration: none;
   color: #FFFFFF;
@@ -247,6 +248,15 @@ body {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   text-align: center;
+}
+.press-link:hover, .press-link:focus,
+.show-me:hover, .press-me:hover, 
+.show-me:focus, .press-me:focus{
+  text-decoration: none;
+  color: #FFFFFF;
+  background-color: #B3904F;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 
