routing with urls is functional

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,51 +1,5 @@
 
+<h1>Here's some dummy text</h1>
+<div ui-view></div>
 
 
-<div class="body-wrapper" > <!-- ng-controller="MainCtrl as main" -->
-  
-<!--
- 
-  <div class="row marketing" >  
-    <div class="customHTML">
-    
-    <div >
-      <h2 class="caption">Search for a specific license</h2>
-        <p class="body-text">Use our search tool to find licenses that relate to your specific line of business.</p>
-          
-
-          <form class="form" name="output" id="output" role="form" >
-            <div class="form-group"> 
-                 <div class="input-group q-group">
-                    <input class="form-control input-lg" type="text" name="q" id="q"  ng-model="formQuery" placeholder="Ex. Nursing" />
-                    <div class="input-group-addon submit-addon"><a class="submit" href="" role="submit" ng-click="getResults(formQuery)">Search</a></div>
-                 </div> 
-            </div>
-          </form >
-
-
-    </div>
-  </div>
--->
-
-  <!-- .CustomHTML --> 
-  <h3>{{formQuery}}</h3>
-
-
-
-
-
-
-
-
-<!--
-  <ol>
-    <li class="result-item" ng-repeat="result in queryRes" >
-      <h2 class="result-copy" ng-bind-html="result.T"></h2>
-      <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
-    </li>
-  </ol>
-  -->
-
-  </div>
- 
-</div>
