--- a/app/partials/results.html
+++ b/app/partials/results.html
@@ -5,16 +5,15 @@
 
   <div class="row marketing" ng-controller="ResultsCtrl" >
 	<div class="customHTML">
-       <p>Results for {{formQuery}} </p>
+       <h3>Your Results: </h3>
          <ol>
            <li class="result-item" ng-repeat="result in queryRes" >
              <h2 class="result-copy" ng-bind-html="result.T"></h2>
              <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
            </li>
-         </ol>	
-		
+         </ol>			
 	</div>
-   </div> 
+  </div> 
 
 
 
