--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,5 +1,6 @@
- 
-  <div class="row marketing"  ng-controller="SearchCtrl">  
+
+  
+  <div class="row marketing"  ng-controller="SearchCtrl" >  
     <div class="customHTML">
     
     <div >
@@ -11,7 +12,7 @@
             <div class="form-group" > 
                  <div class="input-group q-group">
                     <input class="form-control input-lg" type="text" name="q" id="q"  ng-model="formQuery" placeholder="Ex. Nursing" />
-                    <div class="input-group-addon submit-addon"><input type="submit" class="submit btn" role="submit" value="Search"></div>
+                    <div class="input-group-addon submit-addon"><input type="submit" class="submit" role="submit" value="Search"></div>
                  </div> 
             </div>
           </form >
@@ -19,21 +20,9 @@
 
     </div>
   </div>
+
 </div>
  
 
 
-  <div class="row marketing"  ng-controller="ResultsCtrl" ng-show="queryRes.length">
-     <div class="customHTML">
-       <h3>Your Results: </h3>
-         <ol>
-           <li class="result-item" ng-repeat="result in queryRes" >
-             <h2 class="result-copy" ng-bind-html="result.T"></h2>
-             <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
-           </li>
-         </ol>  
-
-      </div>
-   </div> 
-
-
+<div ui-view ></div>
