--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -166,15 +166,15 @@ body {
 #q{
   border-right: 0px none;
 }
+
 .submit{
   background-color: #dda037;
   color: #FFFFFF;
   font-size: 2.3em;
-  width: 100%;
-  height: 100%;
   padding: 6px 12px;
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
+  border: none;
 }
 
 .submit:hover, .submit:focus{
