--- a/app/partials/results.html
+++ b/app/partials/results.html
@@ -5,13 +5,16 @@
 
   <div class="row marketing" ng-controller="ResultsCtrl" >
 	<div class="customHTML">
-       <h3>Your Results: </h3>
+       <h2>Your Results: </h2>
          <ol>
-           <li class="result-item" ng-repeat="result in queryRes" >
-             <h2 class="result-copy" ng-bind-html="result.T"></h2>
+           <li class="result-item" ng-repeat="result in queryRes"  >
+             <h3 class="result-copy" ng-bind-html="result.T" ></h3>
+             <h3>{{result.E}}</h3>
+
              <p class="result-sub-copy"><a href="{{result.U}}">{{result.MT.description}}</a></p>
            </li>
-         </ol>			
+         </ol>
+			
 	</div>
   </div> 
 
